# jetsonAISoftware

./: .gitignore  LICENSE  commande compilation.txt  kPub.pem  server
client/: client.py  main.py  network.py  neuralEngine.py  videoFlux.py  webRtcManagement.py
cpp/: CMakeLists.txt  commande compilation.txt  main.cpp
cpp/XsSignature/: xSignature.c  xSignature.h
cpp/pipeline/: xPipeline.cpp  xPipeline.h
cpp/xAssert/: xAssert.c
jetsonAISoftware CXX/: commandeReceptionTempsréel.txt  pypelinetest.cpp  test
jetsonAISoftware CXX/client/: CMakeLists.txt
jetsonAISoftware CXX/client/engine/: xEngine.cpp  xEngine.h
jetsonAISoftware CXX/client/i2c/: i2c_core.c  i2c_core.h
jetsonAISoftware CXX/client/network/: xNetwork.cpp  xNetwork.h  xSocket.h
jetsonAISoftware CXX/client/pipeline/: xPipeline.cpp  xPipeline.h
jetsonAISoftware CXX/client/xAssert/: xAssert.c  xAssert.h
jetsonAISoftware CXX/server/network/: xSocket.c
jetsonAISoftware CXX/server/tensorEngine/: tensorEngine.h
jetsonAISoftware/client/: network.py  neuralEngine.py  pipelineTest.py  testcv.py  videoFlux.py
jetsonAISoftware/server/: neuralEngine.py  videoFluxManagement.py  webRtcManagement.py
jetsonAISoftware/server/test/: testController.py
py/: main.py
server/: controller.py  imageProcessing.py  main.py  network.py  neuralEngine.py  server.py  webRtcManagement.py
src/: main.cpp
src/xController/: xController.cpp  xController.h
src/xNetwork/: xNetwork.cpp  xNetwork.h  xSocket.c  xSocket.h
src/xSignature/: xSignature.c  xSignature.h
src/xStreamer/: xStreaming.cpp  xStreaming.h
